[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/TDUI.gd" type="Script" id=1]
[ext_resource path="res://models/spikeTower.png" type="Texture" id=2]
[ext_resource path="res://models/basicTower.png" type="Texture" id=3]
[ext_resource path="res://models/multiShotTower.png" type="Texture" id=4]
[ext_resource path="res://models/mainFont.tres" type="DynamicFont" id=5]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 492.0
margin_right = 492.0
margin_bottom = 25.0
size_flags_horizontal = 4
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="CenterContainer"]
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 906.0
margin_top = 131.0
margin_right = 984.0
margin_bottom = 429.0
size_flags_horizontal = 8
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 291.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseTowerButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 61.0
rect_min_size = Vector2( 64, 61 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="BaseTowerLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 64.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 5 )
text = "Left: 3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiTowerButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 64.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 64 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="MultiTowerLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 64.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 5 )
text = " Left: 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpikeTowerButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 64.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 64 )
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="SpikeTowerLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 64.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 5 )
text = " Left: 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="placementRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
enabled = true
cast_to = Vector3( 0, -20, 0 )
collision_mask = 1024
collide_with_areas = true

[node name="CenterContainer2" type="PanelContainer" parent="."]
margin_top = 485.0
margin_right = 314.0
margin_bottom = 560.0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 307.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer"]
margin_right = 300.0
margin_bottom = 25.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Place all Towers to Start!"
align = 1

[node name="StartButton" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_top = 29.0
margin_right = 300.0
margin_bottom = 61.0
rect_min_size = Vector2( 300, 32 )
size_flags_horizontal = 0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 5 )
disabled = true
text = "    Start Round    "

[connection signal="pressed" from="PanelContainer/VBoxContainer/BaseTowerButton" to="." method="_on_placeTowerButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MultiTowerButton" to="." method="_on_placeTowerButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SpikeTowerButton" to="." method="_on_placeTowerButton_pressed" binds= [ 2 ]]
[connection signal="button_down" from="CenterContainer2/VBoxContainer/StartButton" to="." method="_on_StartButton_button_down"]
